FrameLoader::loadURL, FrameLoader::loadPostRequest not attributing requests as app bound https://bugs.webkit.org/show_bug.cgi?id=225923 <rdar://problem/78160933>

Reviewed by Alex Christensen.

Source/WebCore:

Tests: http/tests/in-app-browser-privacy/app-bound-attribution-load-url.html
       http/tests/in-app-browser-privacy/app-bound-attribution-ping-load.html
       http/tests/in-app-browser-privacy/app-bound-attribution-post-request.html

Update FrameLoader::addExtraFieldsToRequest to add the app-bound
value to a request, like for loadURL, loadPostRequest, or ping loads.
Change the name to reflect this use case, which updates the request
but does not add any extra header fields.

Other cases are already covered in WebLoaderStrategy::loadResource.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadURL):
(WebCore::FrameLoader::load):
The main navigation uses the old document loader, so we don't want to
set the app-bound value based on that. The request should have the
correct value already from the UIProcess.
(WebCore::FrameLoader::updateRequestAndAddExtraFields):
(WebCore::FrameLoader::loadPostRequest):
(WebCore::FrameLoader::loadResourceSynchronously):
We can remove setting the app bound value here now that we set the value in
addExtraFieldsToRequest.
(WebCore::FrameLoader::loadDifferentDocumentItem):
(WebCore::FrameLoader::addExtraFieldsToRequest): Deleted.
* loader/FrameLoader.h:
* loader/PingLoader.cpp:
(WebCore::PingLoader::loadImage):
(WebCore::PingLoader::sendPing):
(WebCore::PingLoader::sendViolationReport):
* loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::init):
* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::load):

LayoutTests:

* http/tests/in-app-browser-privacy/app-bound-attribution-load-url-expected.txt: Added.
* http/tests/in-app-browser-privacy/app-bound-attribution-load-url.html: Added.
* http/tests/in-app-browser-privacy/app-bound-attribution-ping-load-expected.txt: Added.
* http/tests/in-app-browser-privacy/app-bound-attribution-ping-load.html: Added.
* http/tests/in-app-browser-privacy/app-bound-attribution-post-request-expected.txt: Added.
* http/tests/in-app-browser-privacy/app-bound-attribution-post-request.html: Added.
* http/tests/in-app-browser-privacy/resources/post.py: Added.
* http/tests/navigation/resources/check-ping-app-bound-data.py: Added.
* platform/ios-wk2/TestExpectations:
These tests rely on internal additions, so I will skip it here and
unskip in the future.


Canonical link: https://commits.webkit.org/238006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277865 268f45cc-cd09-0410-ab3c-d52691b4dbfc