Source/WebCore/loader/FrameLoader.h
@@ -86,6 +86,7 @@ enum class NavigationPolicyDecision : uint8_t;
 enum class ShouldTreatAsContinuingLoad : bool;
 enum class UsedLegacyTLS : bool;
 enum class IsMainResource : bool { No, Yes };
+enum class ShouldUpdateAppBoundValue : bool { No, Yes };
 
 struct WindowFeatures;
 
@@ -318,7 +319,7 @@ public:
     bool alwaysAllowLocalWebarchive() const { return m_alwaysAllowLocalWebarchive; }
 
     // For subresource requests the FrameLoadType parameter has no effect and can be skipped.
-    void addExtraFieldsToRequest(ResourceRequest&, IsMainResource, FrameLoadType = FrameLoadType::Standard);
+    void updateRequestAndAddExtraFields(ResourceRequest&, IsMainResource, FrameLoadType = FrameLoadType::Standard, ShouldUpdateAppBoundValue = ShouldUpdateAppBoundValue::Yes);
 
     void scheduleRefreshIfNeeded(Document&, const String& content);
 
