Source/WebCore/loader/cache/CachedResource.cpp
@@ -244,7 +244,7 @@ void CachedResource::load(CachedResourceLoader& cachedResourceLoader)
     // Navigation algorithm is setting up the request before sending it to CachedResourceLoader?CachedResource.
     // So no need for extra fields for MainResource.
     if (type() != Type::MainResource)
-        frameLoader.addExtraFieldsToRequest(m_resourceRequest, IsMainResource::No);
+        frameLoader.updateRequestAndAddExtraFields(m_resourceRequest, IsMainResource::No);
 
     // FIXME: It's unfortunate that the cache layer and below get to know anything about fragment identifiers.
     // We should look into removing the expectation of that knowledge from the platform network stacks.
